<resources>
    <string name="app_name">STTApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="translate">Translate</string>
    <string name="translator">Translator</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="say_something">Say something</string>
    <string name="translated_text_here">Translated text here</string>
    <string name="enter_text">Enter Text</string>
    <string name="say_something_to_show_text">Say something to show text</string>
    <string name="start_listening">Start listening</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_the_language_you_want_to_record">Select the language you want to record</string>
    <string name="enter_text_or_say_something">Enter text or Say something</string>
    <string name="mic_icon_desc">Microphone icon to start or stop recording.</string>

    <string name="listening">Listening...</string>
    <string name="processing">Processing...</string>
    <string name="no_speech_recognized">No speech recognized, try again.</string>
    <string name="stopped_listening">In Processing....</string>
    <string name="click_to_stop">Listening... Click to stop.</string>
    <string name="error_audio">Audio recording error.</string>
    <string name="error_client">Client-side error.</string>
    <string name="error_permissions">Insufficient permissions.</string>
    <string name="error_network">Network error.</string>
    <string name="error_network_timeout">Network timeout.</string>
    <string name="error_no_match">No speech recognized.</string>
    <string name="error_recognizer_busy">Recognition service busy.</string>
    <string name="error_server">Server error.</string>
    <string name="error_speech_timeout">No speech input detected.</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_starting_listening">Error starting speech recognition.</string>
    <string name="error_initializing_speech_recognizer">Error initializing speech recognizer.</string>
    <string name="permission_denied">Permission denied. The app needs audio access to work.</string>
    <string name="language_not_supported">Selected language not supported, defaulting to English.</string>

    <string name="enter_text_to_translate">Please enter text to translate.</string>
    <string name="translation_failed">Translation failed: </string>
    <string name="model_download_failed">Model download failed: </string>
    <string name="delete">Delete</string>
    <string name="timestamp">Timestamp</string>
    <string name="recognized_text">Recognized Text</string>
    <string name="language_not_supported_for_speech">Language not supported\n</string>
    <string name="no_text_to_copy">No Text To Copy\n</string>
    <string name="text_copied">Text Copied</string>
    <string name="no_internet_connection">No Internet Connection\n</string>
    <string name="save">Save\n</string>
    <string name="history">History</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="translation_saved">Translation Saved</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Vietnamese</item>
        <item>German</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Chinese</item>
    </string-array>
</resources>